fix bug that collapse when transfer from todo to finished

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -175,3 +175,9 @@ input[type=checkbox] {
 li:hover{
     background-color: #8ADAB2;
 }
+
+
+.collapse{
+    transition: .5s ease;
+    display:none;
+}
